fix(74): fixing select color contrast - another place

--- a/components/01-atoms/forms/select/_select.scss
+++ b/components/01-atoms/forms/select/_select.scss
@@ -30,7 +30,7 @@
 }
 
 .form-item__select {
-  border: 1px solid clr(muted);
+  border: 1px solid clr(accent);
   height: 41px; // set height required for discrepancy between .form-item__dropdown border and the select :focus border
   font-size: 16px;
   margin: 0;
